# ChemFormula

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-app.yml  release.yml
examples/: example1.py  example2.py  example3.py  example4.py  example_general.py  example_sorting.py
misc/: AtWt19.html  AtWt23.html
src/: CASRegistryNumber.py  ChemFormula.py  Elements.py  chemformula.py  elements.py
src/chemformula/: __init__.py  chemformula.py  elements.py
tests/: Example1.py  Example2.py  Example3.py  Example4.py  Test.py  TestSorting.py  example1.py  example3.py  example4.py  test_casregnum.py  test_general.py  test_sorting.py
