[project]
name = "chemformula"
version = "1.3.1"
description = "ChemFormula is a Python class for working with chemical formulas. It allows parsing chemical formulas, generating formatted output strings and calculating formula weights."
readme = "README.md"
authors = [
    {name = "Axel Müller", email = "molshape@gmx.net"},
]
maintainers = [
    {name = "Axel Müller", email = "molshape@gmx.net"},
]
requires-python = ">=3.9"
dependencies = [
    "casregnum",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
]

license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/molshape/ChemFormula"
Issues = "https://github.com/molshape/ChemFormula/issues"
Repository = "https://github.com/molshape/ChemFormula.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-sugar",
]
